fix layout bugs

--- a/src/Professor.css
+++ b/src/Professor.css
@@ -10,7 +10,7 @@
 
 @media (max-width:320px){
     .Professor{
-        height: 800px;
+        height: 900px;
     }
 
     .com-info{
