--- a/src/research.css
+++ b/src/research.css
@@ -2,17 +2,17 @@
     background-color:#fff0bc6e;
     text-align: center;
     /* width: 100%; */
-    height: 400px;
+    height: 450px;
 }
 
 
 @media (max-width:320px){
     #research{
-        
+        height: 700px;
     }
 }
 
-@media (min-width:321px) and (max-width:800px){
+@media (min-width:321px) and (max-width:700px){
     #research{
         height: 600px;
     }
